# ME433

./: CMakeLists.txt  uart_advanced.c  why_not.py
Final copy/: CMakeLists.txt  Final_attempt.c
HW10/Gerber/: My_kikad-B_Cu.gbr  My_kikad-B_Mask.gbr  My_kikad-B_Paste.gbr  My_kikad-B_Silkscreen.gbr  My_kikad-Edge_Cuts.gbr  My_kikad-F_Cu.gbr  My_kikad-F_Mask.gbr  My_kikad-F_Paste.gbr  My_kikad-F_Silkscreen.gbr  My_kikad-NPTH.drl  My_kikad-PTH.drl  My_kikad-job.gbrjob
HW10/My_kikad/: My_kikad.bak  My_kikad.kicad_pcb  My_kikad.kicad_prl  My_kikad.kicad_pro  My_kikad.kicad_sch  My_kikad.kicad_sym  fp-info-cache  fp-lib-table  sym-lib-table  ~My_kikad.kicad_sch.lck
HW10/My_kikad/Libraries/my_kikad.pretty/: ICM7555_PDIP.kicad_mod
HW11/: 5MP_camera.py  Camera.c
HW12/: CMakeLists.txt
HW16/: CMakeLists.txt  Motor_controller.c
HW16_copy/: CMakeLists.txt  Motor_controller_copy.c
HW17/: CMakeLists.txt  RPI_zero_final.py
HW2/: CMakeLists.txt  blink.c
HW3/: CDC_comm.c  CMakeLists.txt
HW4/: CMakeLists.txt  DAC_MCP4912.c  Triangle_wave
HW5/: CMakeLists.txt  I2C_communication.c  I2C_communication.h  main.c
HW6/: CMakeLists.txt  font.c  font.h  main_display.c
HW7/: CMakeLists.txt  UART_comm.c  font.c  ssd1306.c  ssd1306.h
HW9/: CMakeLists.txt  Pico_to_zero.c
